# RAGent

./: .gitignore  README.md  main.py  pyproject.toml
core/: agents.py  ingest.py  llm_wrapper.py  retriever.py  tools.py
data/: inflera_overview.txt  llm_basics.txt  rag_explained.txt
index/: chunks.pkl  vector.index
ui/: app.py
