[project]
name = "ragent"
version = "0.1.0"
description = ""
authors = [
    {name = "Shuvham",email = "shuvham.sg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
