[tool.poetry]
name = "ragent"
version = "0.1.0"
description = ""
authors = ["Shuvham <shuvham.sg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
faiss-cpu = ">=1.11.0,<2.0.0"
sentence-transformers = ">=4.1.0,<5.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
openai = ">=0.28,<0.29"
requests = ">=2.32.3,<3.0.0"
streamlit = ">=1.45.0,<2.0.0"
watchdog = ">=6.0.0,<7.0.0"
transformers = ">=4.51.3,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"